~ Fix le systèmes de collision: enlevé le ribidbody aux collisions (1 seul rb nécessaire pour détecter une collision, ils sont sur avatar et projectiles), rb sont dynamiques et les freezes sont correctes ~ Nouveau paramètres pour l'avatar: bouge plus vite, projectile bouge plus vite, 8Dir par defaut pour mouvement et shoot ~ Nouvelles couleurs pour les enemies, les collisions, et le gun de l'avatar

--- a/TopDownShooter/Assembly-CSharp.csproj
+++ b/TopDownShooter/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\Scripts\AvatarController.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\EventArgs\DiedEventArgs.cs" />
+     <Compile Include="Assets\Scripts\FollowAvatar.cs" />
      <Compile Include="Assets\Scripts\HPScript.cs" />
      <Compile Include="Assets\Scripts\InputsNames.cs" />
      <Compile Include="Assets\Scripts\MovementInterface.cs" />
