+ Ajouter le feature que les enemis font des degat s'ils touchent l'avatar, dommage modulable. + Prefab AvatarRespawner: respawn l'avatar avec le bouton start de la manette ou enter du clavier. ~ Systeme de "master" script qui refile les variables au scripts. ~ Systeme de master: le master refile maxHP au HPScript. Un event "Death" a été remplacé par la fonction OnDeath. De ce fait, le master écoute l'event puis définie lui même quoi faire lorsqu'il meurt.

--- a/TopDownShooter/Assembly-CSharp.csproj
+++ b/TopDownShooter/Assembly-CSharp.csproj
@@ -57,7 +57,10 @@
      <Compile Include="Assets\HooverWorkshop\ShootingScriptTest\ShowShootingDir.cs" />
      <Compile Include="Assets\HooverWorkshop\ShootingScriptTest\SimpleProjectile.cs" />
      <Compile Include="Assets\HooverWorkshop\ShootingScriptTest\TestShooter.cs" />
+     <Compile Include="Assets\Scripts\Avatar.cs" />
      <Compile Include="Assets\Scripts\AvatarController.cs" />
+     <Compile Include="Assets\Scripts\AvatarRespawner.cs" />
+     <Compile Include="Assets\Scripts\DamageOnCollision.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\EventArgs\DiedEventArgs.cs" />
      <Compile Include="Assets\Scripts\FollowAvatar.cs" />
