+ EnemyVision.cs: script pour les enemis pour détecter l'avatar (aggroDistance = distance de vision). Contient 2 events: OnAvatarDetected (caller lorsqu'il voit l'avatar pour la premiere fois) et OnVisionLost (lorsque la vision est perdu) ~ Enemy.cs: contient maintenant un script EnemyVision en mémoire et l'instancie automatique s'il n'existe pas durant l'Awake ~ Centré le gun au centre de l'avatar et enemis.

--- a/TopDownShooter/Assembly-CSharp.csproj
+++ b/TopDownShooter/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\AvatarRespawner.cs" />
      <Compile Include="Assets\Scripts\DamageOnCollision.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
+     <Compile Include="Assets\Scripts\EnemyVision.cs" />
      <Compile Include="Assets\Scripts\EventArgs\DiedEventArgs.cs" />
      <Compile Include="Assets\Scripts\FollowAvatar.cs" />
      <Compile Include="Assets\Scripts\HPScript.cs" />
@@ -70,6 +71,7 @@
      <Compile Include="Assets\Scripts\Projectile.cs" />
      <Compile Include="Assets\Scripts\Shooter.cs" />
      <Compile Include="Assets\Scripts\ShootingInterface.cs" />
+     <Compile Include="Assets\Scripts\VectorFunc.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
